Feat sort query params to find all players